# GIR-Engine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  CodingStandard.md  README.md
Assets/: sponzaPBR.mtl
CMake/: CleanCppExtensions.cmake
Data/: ImGui.ini  Sponza.json
Docs/: CMakeLists.txt
Packaging/: CMakeLists.txt  DS_Store.scpt  GIR_Engine.desktop  GIR_Engine.icon.in.rc
Scenes/: BreakfastRoom.json  SceneTemplate.json  Sponza.json  Sponza_2.json
Shaders/: CookTorrance.fs.glsl  Debug.fs.glsl  Debug.vs.glsl  DeferredLigthing.fs.glsl  GBuffer.fs.glsl  GBuffer.vs.glsl  IndirectLighting.fs.glsl  IndirectLighting.vs.glsl  Light.glsl  LowResRSM.vs.glsl  LowResRsm.fs.glsl  Material.glsl  ShadowMapping.fs.glsl  ShadowMapping.vs.glsl  ShadowMappingPL.fs.glsl  ShadowMappingPL.gs.glsl  ShadowMappingPL.vs.glsl  Tonemapping.fs.glsl  Unlit.fs.glsl
Sources/: CMakeLists.txt  EntryPoint.cpp
Sources/Application/: Application.cpp  Application.hpp  Window.cpp  Window.hpp  WindowEventListener.hpp
Sources/Core/: Core.hpp  Logger.hpp  Math.hpp  Type.hpp  Types.hpp
Sources/Engine/: Bindable.hpp  Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  Framebuffer.cpp  Framebuffer.hpp  Light.hpp  Material.cpp  Material.hpp  MaterialManager.cpp  MaterialManager.hpp  Mesh.cpp  Mesh.hpp  Model.hpp  RenderSystem.cpp  RenderSystem.hpp  Scene.cpp  Scene.hpp  SceneComponent.cpp  SceneComponent.hpp  Shader.cpp  Shader.hpp  Shader.inl  ShaderManager.cpp  ShaderManager.hpp  ShaderManager.inl  Texture2D.cpp  Texture2D.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp  VertexArrayObjectManager.cpp  VertexArrayObjectManager.hpp  VertexArrayObjectManager.inl
Sources/Engine/Camera/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  CameraDebug.hpp
Sources/Engine/Component/: Component.cpp  Component.hpp  OpenGLComponent.hpp  OpenGLComponent.inl  SceneComponent.cpp  SceneComponent.hpp
Sources/Engine/Framebuffer/: Framebuffer.cpp  Framebuffer.hpp
Sources/Engine/Light/: DirectionalLight.cpp  DirectionalLight.hpp  DirectionnalLight.cpp  DirectionnalLight.hpp  Light.cpp  Light.hpp  PointLight.cpp  PointLight.hpp  SpotLight.cpp  SpotLight.hpp
Sources/Engine/Manager/: Manager.hpp
Sources/Engine/Material/: Material.cpp  Material.hpp  MaterialManager.cpp  MaterialManager.hpp
Sources/Engine/Mesh/: Entity.cpp  Entity.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  VertexArrayObject.cpp  VertexArrayObject.hpp
Sources/Engine/OpenGL/: OpenGL.hpp
Sources/Engine/Renderer/: Quad.cpp  Quad.hpp  Renderer.cpp  Renderer.hpp
Sources/Engine/Scene/: Scene.cpp  Scene.hpp
Sources/Engine/Shader/: Shader.cpp  Shader.hpp  Shader.inl  ShaderManager.cpp  ShaderManager.hpp  ShaderManager.inl
Sources/Engine/Texture/: Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp
Sources/IO/: TextureLoader.cpp  TextureLoader.hpp
Sources/IO/FileSystem/: FileSystem.hpp
Sources/IO/Input/: Input.cpp  Input.hpp
Sources/IO/Loader/: ModelLoader.cpp  ModelLoader.hpp  SceneLoader.cpp  SceneLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
Sources/IO/Saver/: ImageWriter.cpp  ImageWriter.hpp
Sources/ImGui/: ImGuiController.cpp  ImGuiController.hpp
Sources/ImGui/Widget/: ImGuiWidget.hpp  LightingWidget.cpp  LightingWidget.hpp  SceneWidget.cpp  SceneWidget.hpp  StatsWidget.cpp  StatsWidget.hpp  TransformEditorWidget.cpp  TransformEditorWidget.hpp  ViewportWidget.cpp  ViewportWidget.hpp  Widget.hpp
Test/: CMakeLists.txt
